@@ -1,8 +1,5 @@
 package com.hea3ven.buildingbricks.core.blocks;
 
-import javax.vecmath.Matrix4f;
-import javax.vecmath.Point3f;
-
 import net.minecraft.block.properties.IProperty;
 import net.minecraft.block.state.BlockState;
 import net.minecraft.block.state.IBlockState;
@@ -79,16 +76,24 @@ public class BlockBuildingBricksCorner extends BlockBuildingBricksNonSolid {
 	public AxisAlignedBB getBoundingBox(IBlockState state) {
 		EnumBlockHalf half = BlockProperties.getHalf(state);
 		EnumRotation rot = BlockProperties.getRotation(state);
-		Matrix4f matrix = new Matrix4f();
-		matrix.setIdentity();
-		matrix.rotY(-rot.getAngle());
-
-		Point3f min = new Point3f(-0.5f, half == EnumBlockHalf.BOTTOM ? -0.5f : 0.0f, -0.5f);
-		Point3f max = new Point3f(0.0f, half == EnumBlockHalf.BOTTOM ? 0.0f : 0.5f, 0.0f);
-		matrix.transform(min);
-		matrix.transform(max);
-		AxisAlignedBB bb = new AxisAlignedBB(min.x + 0.5f, min.y + 0.5f, min.z + 0.5f, max.x + 0.5f,
-				max.y + 0.5f, max.z + 0.5f);
+		double minX, maxX;
+		if (rot == EnumRotation.ROT0 || rot == EnumRotation.ROT270) {
+			minX = 0.0d;
+			maxX = 0.5d;
+		} else {
+			minX = 0.5d;
+			maxX = 1.0d;
+		}
+		double minZ, maxZ;
+		if (rot == EnumRotation.ROT0 || rot == EnumRotation.ROT90) {
+			minZ = 0.0d;
+			maxZ = 0.5d;
+		} else {
+			minZ = 0.5d;
+			maxZ = 1.0d;
+		}
+		AxisAlignedBB bb = new AxisAlignedBB(minX, half == EnumBlockHalf.BOTTOM ? 0.0d : 0.5d, minZ,
+				maxX, half == EnumBlockHalf.BOTTOM ? 0.5d : 1.0d, maxZ);
 		return bb;
 	}
 }
