@@ -1,3 +1,5 @@
+    * Remove usage of javax.vecmath which is not available on servers, fixes #15.
+
 1.0.0:
     * Fix material loading when running on servers, fixes #14.
     * Improve face culling, fixes #1.
